[package]
name = "civicsearch"
version = "0.1.0"
authors = ["Roger Filmyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "^0.12.0"
geo-types = "^0.4.3"
shapefile = { version = "^0.2.0", features = ["geo-types"] }
zip = "0.5.6"
tempfile = "3.1.0"
log = "^0.4.11"
env_logger = "^0.7.1"