[package]
name = "civicsearch"
version = "0.2.1"
description = "CLI utility looking up legislative districts for latitude/longitude coordinates."
authors = ["Roger Filmyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.15.0"
geo-types = "0.6.0"
shapefile = { version = "0.2.1", features = ["geo-types"] }
zip = "0.5.8"
tempfile = "3.1.0"
log = "^0.4.11"
env_logger = "^0.7.1"
thiserror = "1.0"
num = "0.3"
clap = "2.33.3"
csv = "1.1.3"
serde = { version = "1.0.117", features = ["derive"] }